画面遷移、クリア

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -1,6 +1,6 @@
 [/Script/EngineSettings.GameMapsSettings]
 GameDefaultMap=/Game/Levels/Lvl_Title.Lvl_Title
-EditorStartupMap=/Game/Levels/Lvl_Game.Lvl_Game
+EditorStartupMap=/Game/Levels/Lvl_Title.Lvl_Title
 GlobalDefaultGameMode=/Game/MyProjectCharacter/BP_ThirdPersonGameMode.BP_ThirdPersonGameMode_C
 GameInstanceClass=/Game/GameInstance/BP_MyGameInstance.BP_MyGameInstance_C
 
